<!DOCTYPE resources [<!ENTITY appname "iHateStau">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="menu_action_settings">Einstellungen</string>
    <string name="camera_list_title">Liste der verfügbaren Kameras</string>
    <string name="list_item_camera_list_button_caption_add">Beobachten</string>
    <string name="list_item_camera_list_button_caption_remove">Entfernen</string>
    <string name="overview_headline">Kameras zur Beobachtung</string>
    <string name="menu_action_overview">Übersicht</string>
    <string name="menu_action_camera_list">Alle Kameras</string>
    <string name="menu_action_map">Karte</string>
    <string name="tbd">tbd...coming soon</string>
    <string name="add_camera_headline">Kamera beobachten</string>
    <string name="add_camera_info">Über die folgenden Buttons können Sie an vorausgewählte Orte springen, um die Stelle festzulegen, an der Sie über einen bestehenden Stau an dieser Kamera informiert werden möchten.</string>
    <string name="add_camera_button">Kamera beobachten</string>
    <string name="add_camera_location_label">Ihr gewählter Ort:</string>
    <string name="button_add_camera_focus_camera">Auf Kamera fokusieren</string>
    <string name="wrong_location_mode"><![CDATA[Bitte aktivieren Sie unter \"Einstellungen -> Standort\" den Modus \"Hohe Genauigkeit\"]]></string>
    <string name="notificationpoint_for">Benachrichtungspunkt für</string>
    <string name="jam_probability_notification_text_begin">Die Stauwahrscheinlichkeit an der Kamera \"</string>
    <string name="jam_probability_notification_text_end">beträgt</string>
    <string name="jam_probability_notification_percent"> Prozent</string>
    <string name="no_cameras_to_observe">Bitte legen Sie Kameras an, die beobachte werden sollen.</string>
    <string name="no_use_without_permissions">Sie können diese Funktion nicht ohne die angefragten Berechtigungen nutzen.</string>
    <string name="preference_geofence_radius_in_meters_title">Geofence Radius in Metern</string>
    <string name="preference_geofence_radius_in_meters_key">geofence_radius_in_meters</string>
    <string name="preference_geofence_radius_in_meters_default">2000</string>
    <string name="preference_geofence_intervall_in_milliseconds_title">Intervall für das Geofencing in Millisekunden</string>
    <string name="preference_geofence_intervall_in_milliseconds_key">geofence_intervall_in_milliseconds</string>
    <string name="preference_geofence_intervall_in_milliseconds_default">2000</string>
    <string name="overview_start_geofence">Karte</string>
    <string name="overview_add_camera">Liste aller Kameras</string>
    <string name="geofencing_service_activated">Die Stauerkennung ist aktiviert.</string>
    <string name="geofencing_service_stop">Service beenden</string>
    <string name="preference_geofence_intervall_in_milliseconds_min">100</string>
    <string name="preference_min_violation">Der Wert muss größer sein als</string>
    <string name="camera_list_reload_completed">Synchronisation abgeschlossen.</string>
    <string name="button_add_camera_preselected_spot">Derzeit ausgewählter Ort</string>
    <string name="add_camera_button_edit">Kamera ändern</string>
    <string name="toggle_button_geofence_off">Stauerkennung (AUS)</string>
    <string name="toggle_button_geofence_on">Stauerkennung (AN)</string>
    <string name="toggle_button_learning_off">Route lernen (AUS)</string>
    <string name="toggle_button_learning_on">Route lernen (AN)</string>
    <string name="no_cameras_to_learn">Es sind keine Daten zu Kameras oder Ausfahrten vorhanden. Bitte synchronisieren Sie ihre Daten mit dem Server!</string>
    <string name="camera">Kamera</string>
    <string name="exit">Ausfahrt</string>
    <string name="learning_service_activated">Der Lernmodus ist aktiviert.</string>
    <string name="learning_mode_caution">Achtung!</string>
    <string name="learning_mode_caution_text">Sie sind im Begriff den Lernmodus zu starten.\nSie können neue Kameras ihrer bestehenden Auswahl hinzufügen, oder die derzeit angelegten Kameras löschen.\n\nMöchten Sie ihre derzeit angelegten Kameras löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="ok">Ok</string>
    <string name="learning_mode_summary_title">Lern-Modus beendet</string>
    <string name="learning_mode_summary_text_start">Die folgenden Kameras wurden ihrer Liste hinzugefügt:\n\n</string>
    <string name="notificationpoint">Benachrichtungspunkt</string>
    <string name="no_notificationpoint">Kein Benachrichtungspunkt gefunden</string>
    <string name="learning_mode_summary_text_end">Für Kameras, zu denen keine vorherige Ausfahrt gefunden wurde, wird die Kamera selbst als Benachrichtungspunkt eingetragen.\nDies können Sie jederzeit manuell ändern.</string>
    <string name="rest_call_failed">Beim Abruf der Daten vom Server ist ein Fehler aufgetreten.</string>
    <string name="jam_probability_not_available">konnte nicht ermittelt werden</string>
    <string name="cancel">Abbrechen</string>
    <string name="no_new_cameras_found">Es wurden keine neuen Kameras gefunden.</string>
    <string name="notification">Benachrichtigung</string>
    <string name="preference_fancy_color_mode_title">Fancy Color Mode</string>
    <string name="preference_fancy_color_mode_key">fancy_color_mode</string>
    <string name="preference_fancy_color_mode_default">false</string>
    <string name="activated">Aktiviert</string>
    <string name="deactivated">Deaktiviert</string>
    <string name="activity_title_overview">&appname; - Übersicht</string>
    <string name="activity_title_map">&appname; - Karte</string>
    <string name="activity_title_settings">&appname; - Einstellungen</string>
    <string name="activity_title_add_camera">&appname; - Kamera beobachten</string>
    <string name="activity_title_edit_camera">&appname; - Kamera ändern</string>
    <string name="activity_title_camera_list">&appname; - Alle Kameras</string>
</resources>
