<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_overview"
        android:title="@string/menu_action_overview"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_map"
        android:title="@string/menu_action_map"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_camera_list"
        android:title="@string/menu_action_camera_list"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>