<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/swipe_layout_overview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.OverviewActivity">

        <ToggleButton
            android:id="@+id/toggle_overview_geofence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_button_geofence_off"
            android:textOn="@string/toggle_button_geofence_on" />

        <ToggleButton
            android:id="@+id/toggle_overview_learning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_button_learning_off"
            android:textOn="@string/toggle_button_learning_on" />

        <Button
            android:id="@+id/button_overview_start_geofence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview_start_geofence" />

        <Button
            android:id="@+id/button_overview_add_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview_add_camera" />

        <TextView
            android:id="@+id/textview_overview_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:textSize="@dimen/font_size_large"
            android:text="@string/overview_headline" />

        <ListView
            android:id="@+id/listview_overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin" />

    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>